Add "force" parameter to facilitate testing
